--- a/tplv2/admin/article_list.html
+++ b/tplv2/admin/article_list.html
@@ -12,10 +12,10 @@
 	                    <td width="180" class="c_input_small">
 	                        <input type="text" name="titlelike" value="{$get.title}" />
 	                    </td>
-	                    <td width="60" class="t_title">按用户ID</td>
+	                    <!-- <td width="60" class="t_title">按用户ID</td>
 	                    <td width="180" class="c_input_small">
 	                        <input name="uid" type="text" value="{$get.niname}" />
-	                    </td>
+	                    </td> -->
 	                    <td>
 	                        <input id="btn_return" class="btn_return" type="submit" value="搜索" />
 	                    </td>
