--- a/tplv2/admin/header.html
+++ b/tplv2/admin/header.html
@@ -35,7 +35,7 @@
 			        </li>
 			        <div {$curr_systemdisplay}>
 			            <a href="{spUrl c=admin a=models}" {$curr_models}>模型管理</a>
-			            <a href="{spUrl c=admin a=cpage}" {$curr_cpage}>自定义页面管理</a>
+			            <!-- <a href="{spUrl c=admin a=cpage}" {$curr_cpage}>自定义页面管理</a> -->
 			            <a href="{spUrl c=admin a=term}" {$curr_term}>网站栏目管理</a>
 			        </div>
 
@@ -65,7 +65,7 @@
 					<div {$curr_zhaopin_div}>
 			            <a href="{spUrl c=admin a=zhaopin do=list}" {$curr_zhaopin_list}>招聘列表</a>
 					    <a href="{spUrl c=admin a=zhaopin do=save}" {$curr_zhaopin_save}>增改岗位</a>
-					    <a href="{spUrl c=admin a=zhaopin do=jianli}" {$curr_zhaopin_jianli}>简历列表</a>
+					    <!-- <a href="{spUrl c=admin a=zhaopin do=jianli}" {$curr_zhaopin_jianli}>简历列表</a> -->
 					</div>
 
 					<li>
@@ -76,7 +76,7 @@
 					</div>
 
 					<li>
-						<a href="{spUrl c=admin a=guestbook}" {$curr_bm}><span class="f_system">留言查看</span></a>
+						<a href="{spUrl c=admin a=guestbook}" {$curr_guestbook}><span class="f_system">留言查看</span></a>
 					</li>
 
 					<li>
