--- a/tplv2/theme/banji/aside.html
+++ b/tplv2/theme/banji/aside.html
@@ -1,6 +1,6 @@
 <div class="my_data">
-    <li class="data_follow">{$user.flow}<span>老师数</span></li>
-	<li class="data_fans">{$myLook}<span>学生数</span></li>
+    <li class="data_follow">{$childNum.teacher}<span>老师数</span></li>
+	<li class="data_fans">{$childNum.student}<span>学生数</span></li>
 	<li class="data_post">{$user.num}<span>发布数</span></li>
 	<div class="clear"></div>
 </div>
