--- a/templet/baoding/index.html
+++ b/templet/baoding/index.html
@@ -112,7 +112,7 @@
                     {/foreach}
                     <div class="clear"></div>
                 </ul>
-                <p class="gd"><a href="{spUrl c=information_list a=index tid=31}">READ MOER</a>
+                <p class="gd"><a href="{spUrl c=information_list a=index tid=31}"><img src="{$skin_path}images/1.png" /></a>
                 </p>
             </div>
             <div class="kz">
@@ -144,7 +144,7 @@
                     {/foreach}
                     <div class="clear"></div>
                 </ul>
-                <p class="gd gd1"><a href="{spUrl c=information_list tid=33}">READ MOER</a>
+                <p class="gd gd1"><a href="{spUrl c=information_list tid=33}"><img src="{$skin_path}images/2.png" /></a>
                 </p>
             </div>
             <div class="kz">
@@ -155,7 +155,7 @@
                     </div>
                     <p>六一活动精彩视频片段</p>
                 </div>
-                <p class="gd gd2"><a href="">READ MOER</a>
+                <p class="gd gd2"><a href=""><img src="{$skin_path}images/3.png" /></a>
                 </p>
             </div>
             <div class="clear"></div>
