--- a/templet/baoding/public/layout.html
+++ b/templet/baoding/public/layout.html
@@ -16,6 +16,7 @@
 </head>
 
 <body>
+    {include_php './templet/baoding/public/top.php'} 
     <div id="header">
         <div class="main">
             <div class="left logo">
