--- a/templet/baoding/wybm.html
+++ b/templet/baoding/wybm.html
@@ -15,6 +15,7 @@
                     <h1>我要报名<span>I Want To Register</span></h1>
                     <div class="wyyy_nr">
                         <table>
+                            <input type="hidden" name="type" value="0"/>
                             <tr>
                                 <td class="tex left">宝 宝 姓 名 ：</td>
                                 <td class="text left">
