--- a/templet/baoding/wyyy.html
+++ b/templet/baoding/wyyy.html
@@ -15,6 +15,7 @@
                     <h1>我要预约<span>I Want To Make An Appointment</span></h1>
                     <div class="wyyy_nr">
                         <table>
+                            <input type="hidden" name="type" value="1"/>
                             <tr>
                                 <td class="tex left">宝 宝 姓 名 ：</td>
                                 <td class="text left">
