--- a/tplv2/admin/header.html
+++ b/tplv2/admin/header.html
@@ -73,10 +73,11 @@
 					</li>
 					<div {$curr_bm_div}>
 			            <a href="{spUrl c=admin a=bmorder}" {$curr_bm_list}>报名列表</a>
+			              <a href="{spUrl c=admin a=yuyue}" {$curr_yy_list}>预约列表</a>
 					</div>
 
 					<li>
-						<a href="{spUrl c=admin a=guestbook}" {$curr_bm}><span class="f_system">留言查看</span></a>
+						<a href="{spUrl c=admin a=guestbook}" {$curr_guestbook}><span class="f_system">留言查看</span></a>
 					</li>
 
 					<li>
