--- a/templet/baoding/public/layout_clear.html
+++ b/templet/baoding/public/layout_clear.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+    {include_php './templet/baoding/public/top.php'} 
     <div id="header">
         <div class="main">
             <div class="left logo">
