--- a/templet/baoding/index.html
+++ b/templet/baoding/index.html
@@ -253,7 +253,7 @@
                         </div>
                         <div class="clear"></div>
                     </div>
-                    <p><a class="ys1" href="{spUrl c=education_jqzk tid=39}">READ MORE</a>
+                    <p><a class="ys1" href="{spUrl c=education_jqzk tid=39}"><img src="{$skin_path}images/4.png" /></a>
                     </p>
                 </div>
                 <div class="suxa"></div>
@@ -273,7 +273,7 @@
                         </div>
                         <div class="clear"></div>
                     </div>
-                    <p><a class="ys2" href="{spUrl c=mzsp tid=24}">READ MORE</a>
+                    <p><a class="ys2" href="{spUrl c=mzsp tid=24}"><img src="{$skin_path}images/5.png" /></a>
                     </p>
                 </div>
                 <div class="suxa"></div>
@@ -290,7 +290,7 @@
                         </div>
                         <div class="clear"></div>
                     </div>
-                    <p><a class="ys3" href="{spUrl c=life tid=20}">READ MORE</a>
+                    <p><a class="ys3" href="{spUrl c=life tid=20}"><img src="{$skin_path}images/6.png" /></a>
                     </p>
                 </div>
                 <div class="suxa"></div>
@@ -310,21 +310,12 @@
                         </div>
                         <div class="clear"></div>
                     </div>
-                    <p><a class="ys4" href="{spUrl c=wyyy tid=28}">READ MORE</a>
+                    <p><a class="ys4" href="{spUrl c=wyyy tid=28}"><img src="{$skin_path}images/7.png" /></a>
                     </p>
                 </div>
 
             </div>
         </div>
     </div>
-    <div id="right_xf">
-        <ul>
-            <li class="bm"><a href="{spUrl c=wybm tid=27}" title="报名"></a></li>
-            <li class="kf"><a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=435690026&site=qq&menu=yes" title="客服"></a></li>
-            <li class="hdzs"><a href="{spUrl c=life tid=20}" title="活动展示"></a></li>
-            <li class="ysfb"><a href="{spUrl c=park tid=2}" title="园所分布"></a></li>
-            <li class="jrwm"><a href="{spUrl c=jiamenjianqiao tid=8}" title="加入我们"></a></li>
-            <li class="fhdb"><a href="#top" title="返回顶部"></a></li>
-        </ul>
-    </div>
+    
 {/block}
