--- a/templet/baoding/public/layout_zd.html
+++ b/templet/baoding/public/layout_zd.html
@@ -55,6 +55,7 @@
 </head>
 
 <body>
+    {include_php './templet/baoding/public/top.php'}
     <div id="header">
         <div class="main">
             <div class="left logo">
