--- a/templet/fenyuan/yybm_wyyy.html
+++ b/templet/fenyuan/yybm_wyyy.html
@@ -52,11 +52,7 @@
                         <tr>
                             <td class="tex xzxx left">选 择 学 校</td>
                             <td class="text left">
-                                <select name="xuexiao">
-                                    {foreach $schools as $vo}
-                                    <option value="{$vo.username}">{$vo.username}</option>
-                                    {/foreach}
-                                </select>
+                                   <input type="text" id="input_schools" />
                             </td>
                         </tr>
                         <tr class="wtly">
