--- a/templet/baoding/mzsp.html
+++ b/templet/baoding/mzsp.html
@@ -57,7 +57,7 @@
                                                 {/foreach}
                                             {/foreach}
                                         {else}
-                                            <p><img src="{$skin_path}images/shipu-1.png" /></p>
+                                            <p><img src="{$skin_path}images/shipu-1.jpg" /></p>
                                         {/if}
                                     </ul>
                                     <div class="clear"></div>
