--- a/templet/phone_fen/profile.html
+++ b/templet/phone_fen/profile.html
@@ -20,6 +20,7 @@
                <a class="arrowLeft" data-ajax="false" href="javascript:history.go(-1);">
                 <img width="35px;" height="35px;" src="{$skin_path}images/page-back.png" alt="返回" /></a>
                <h1 class="pagehead-title">{$article.title}</h1>
+               <a class="arrowRight" href="index.html"  data-ajax="false"><img width="35px;" height="35px;" src="{$skin_path}images/home.png" alt="菜单" /></a> 
            </div>
         </div>
         <div id="main" class="main-page">
