--- a/templet/phone_fen/graphic-details.html
+++ b/templet/phone_fen/graphic-details.html
@@ -19,6 +19,7 @@
             <div class="pagehead-box">
                <a class="arrowLeft" data-ajax="false" href="javascript:history.go(-1);"><img width="35px;" height="35px;" src="images/page-back.png" alt="返回" /></a>
                <h1 class="pagehead-title">精彩活动</h1>
+               <a class="arrowRight" href="index.html"  data-ajax="false"><img width="35px;" height="35px;" src="{$skin_path}images/home.png" alt="菜单" /></a> 
            </div>
         </div>
         <div id="main" class="main-page">
