--- a/templet/baoding/index.html
+++ b/templet/baoding/index.html
@@ -151,7 +151,7 @@
                 <h3><img src="{$skin_path}images/hlsg.png" /></h3>
                 <div class="hgsg">
                     <div class="spin">
-                        <embed src="http://player.youku.com/player.php/sid/XMzY5NTMyNjgw/v.swf" allowFullScreen="true" quality="high" width="310" height="243" align="middle" allowScriptAccess="always" type="application/x-shockwave-flash"></embed>
+                        <embed wmode="transparent" src="http://player.youku.com/player.php/sid/XMzY5NTMyNjgw/v.swf" allowFullScreen="true" quality="high" width="310" height="243" align="middle" allowScriptAccess="always" type="application/x-shockwave-flash"></embed>
                     </div>
                     <p>六一活动精彩视频片段</p>
                 </div>
