--- a/templet/fenyuan/mzsp_sp.html
+++ b/templet/fenyuan/mzsp_sp.html
@@ -113,7 +113,7 @@
                           <tr>
                             <td class="w365">
                             	<ul>
-                                	<li>{$day_food.zao}</li>
+                                	<li>{$day_food.zao|vstr_replace:"\n":"<br />"|default:"暂无添加"}</li>
                                 </ul>
                             </td>
                             <td class="430"><p><img src="{$skin_path}images/06.png" /></p></td>
@@ -127,7 +127,7 @@
                             </td>
                             <td class="430">
                             	<ul>
-                                	<li>{$day_food.zaodian}</li>
+                                	<li>{$day_food.zaodian|vstr_replace:"\n":"<br />"|default:"暂无添加"}</li>
                                 </ul>
                             </td>
                           </tr>
@@ -137,7 +137,7 @@
                           <tr>
                             <td class="w365">
                             	<ul>
-                                	<li>{$day_food.wu}</li>
+                                	<li>{$day_food.wu|vstr_replace:"\n":"<br />"|default:"暂无添加"}</li>
                                 </ul>
                             </td>
                             <td class="430"><p><img src="{$skin_path}images/16.png" /></p></td>
@@ -151,7 +151,7 @@
                             </td>
                             <td class="430">
                             	<ul>
-                                	<li>{$day_food.wudian}</li>
+                                	<li>{$day_food.wudian|vstr_replace:"\n":"<br />"|default:"暂无添加"}</li>
                                 </ul>
                             </td>
                           </tr>
@@ -161,7 +161,7 @@
                           <tr>
                             <td class="w365">
                             	<ul>
-                                	<li>{$day_food.wan}</li>
+                                	<li>{$day_food.wan|vstr_replace:"\n":"<br />"|default:"暂无添加"}</li>
                                 </ul>
                             </td>
                             <td class="430"><p><img src="{$skin_path}images/30.png" /></p></td>
