--- a/tplv2/index.html
+++ b/tplv2/index.html
@@ -2,7 +2,7 @@
 {literal}
 
 {/literal}
-<div id="index">
+<div id="index"> 
     <div id="article">
 	    {include file="require_post.html"}
 		
@@ -30,7 +30,7 @@
 			<div id="feed_box"></div>
 			<script type="text/javascript">
 				$(document).ready(function(){ 
-					// yb_load_feeds('blog','feeds');
+					yb_load_feeds('blog','feeds');
 				})
 			</script>
 		</div>
