--- a/templet/baoding/park_zy.html
+++ b/templet/baoding/park_zy.html
@@ -19,7 +19,7 @@
                         {$vo.content}
                     </div>
                     <p class="gengduo">
-                        <a href="{$vo.tpl}">READ MORE</a>
+                        <a href="{$vo.tpl}" target="_blank">READ MORE</a>
                     </p>
                     <div class="clear"></div>
                 </div>
