--- a/templet/phone/index.html
+++ b/templet/phone/index.html
@@ -6,7 +6,7 @@
     <div id="main" style="padding:50px 0 0;">
         <div class="container">
             <img class="db" width="100%;" src="{$skin_path}images/banner1.jpg" alt="剑桥" />
-            <a id="the-anchor" data-ajax="false" href="#news" class="arrow-b">
+            <a id="the-anchor" href="#news" class="arrow-b">
                 <img src="{$skin_path}images/bottom-arrow.png" alt="向下" />
             </a>
         </div>
