--- a/tplm/album.html
+++ b/tplm/album.html
@@ -17,7 +17,7 @@
     <div id="wrap">
         <div id="header" class="header-page clearFlaot">
             <div class="pagehead-box">
-                <a class="arrowLeft" data-ajax="false" href="javascript:history.go(-1);">
+                <a class="arrowLeft" data-ajax="false" href="{spUrl c=phone a=index}">
                     <img width="28px;" height="25px;" src="{$syskin}/images/page-back.png" alt="返回" />
                 </a>
                 <h1 class="pagehead-title">班级相册</h1>
