--- a/tplm/index.html
+++ b/tplm/index.html
@@ -17,7 +17,7 @@
     <div id="wrap">
         <div id="header" class="header-page clearFlaot">
             <div class="pagehead-box">
-                <a class="arrowLeft" data-ajax="false" href="javascript:history.go(-1);">
+                <a class="arrowLeft" data-ajax="false" href="{spUrl c=phone a=index}">
                     <img width="43px;" height="35px;" src="{$syskin}/images/logo.png" alt="返回" />
                 </a>
                 <h1 class="pagehead-title">{$banjiInfo.username}</h1>
@@ -69,10 +69,10 @@
                     </a>
                 </li>
                 <li class="index-m m-7">
-                    <a class="clearFloat" href="qsjl.html">
+                    <a class="clearFloat" href="{spUrl c=phone a=letter_post}">
                         <img width="100%" src="{$syskin}/images/menu5.png" />
                     </a>
-                    <a class="m-word" href="qsjl.html">
+                    <a class="m-word" href="{spUrl c=phone a=letter_post}">
                         <p>私信家长</p>
                     </a>
                 </li>
