--- a/tplm/login.html
+++ b/tplm/login.html
@@ -31,7 +31,7 @@
                         <input type="text" class="text" value="Password" onfocus="if(this.value==defaultValue) { this.value='';this.type='password' }" onblur="if(!value) { value=defaultValue; this.type='text'; }">
                     </li>
                     <li>
-                        <button class="l_submit" type="submit" value="绑定微信">绑定微信</button>
+                        <input class="l_submit" type="submit" value="登陆网站" />
                     </li>
                 </ul>
             </form>
