--- a/tplm/notice_post.html
+++ b/tplm/notice_post.html
@@ -16,7 +16,7 @@
     <div id="wrap">
         <div id="header" class="header-page clearFlaot">
             <div class="pagehead-box">
-                <a class="arrowLeft" data-ajax="false" href="javascript:history.go(-1);">取消</a>
+                <a class="arrowLeft" data-ajax="false" href="{spUrl c=phone a=index}">取消</a>
                 <h1 class="pagehead-title">通知公告</h1>
                 <a class="arrowRight" href="javascript:;"  data-ajax="false" data-role="button">发送</a>
             </div>
