--- a/tplm/wechat_login.html
+++ b/tplm/wechat_login.html
@@ -1,15 +1,51 @@
-<!DOCTYPE html>
-<html lang="cn">
+<!DOCTYPE HTML>
+<html>
+
 <head>
-	<meta charset="UTF-8">
-	<title>wechat_login</title>
+    <title>剑桥幼儿园</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="format-detection" content="telephone=no">
+    <link rel="stylesheet" href="{$syskin}/css/reset.css">
+    <link rel="stylesheet" href="{$syskin}/css/style.css">
 </head>
+
 <body>
-	<form action="{spUrl c=main a=wechat_login}" method="post">
-		<input type="text" name="email" />
-		<input type="text" name="password" />
-		<input type="text" name="openid" value="{$smarty.get.openid}" />
-		<input type="submit" />
-	</form>
+    <div id="wrap">
+        <div class="full-bg">
+            <img width="100%" height="100%" src="{$syskin}/images/login-bg.jpg" alt="登录背景" />
+        </div>
+        <div id="header"></div>
+        <div id="main" style="width:80%;max-width:320px; margin:0 auto;">
+            <div class="mt40">
+                <img width="100%" src="{$syskin}/images/login-logo.png" alt="用户登录">
+            </div>
+            <form name="login" action="{spUrl c=main a=wechat_login}" method="post">
+                <ul class="login_form">
+                    <li class="l_namber l_input">
+                        <input type="text" name="email" value="Email" onfocus="if(this.value==defaultValue) { this.value='' }" onblur="if(!value) { value=defaultValue; }">
+                    </li>
+                    <li class="l_password l_input">
+                        <input type="text" class="text" name="password" value="Password" onfocus="if(this.value==defaultValue) { this.value='';this.type='password' }" onblur="if(!value) { value=defaultValue; this.type='text'; }">
+                    </li>
+                    <li>
+                    	<input type="hidden" name="openid" value="{$smarty.get.openid}" />
+                        <input class="l_submit" type="submit" value="绑定微信" />
+                    </li>
+                </ul>
+            </form>
+        </div>
+        <div id="footer"></div>
+    </div>
 </body>
+<script src="{$syskin}/js/jquery.min.js"></script>
+<script type="text/javascript">
+$(document).ready(function($) {
+    $(".full-bg").width($(window).width());
+    $(".full-bg").height($(window).height());
+});
+</script>
+
 </html>
